<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/editText"
            android:textSize="@dimen/EditTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            android:autofillHints="username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Del"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Del"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_Share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Share"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_Plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_Del"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Plus"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_Minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_Share"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_1"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Del" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_2"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_Del"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_3"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_Minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_Share" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Minus"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_Multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_Plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_4"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_5"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_6"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_Multiply"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Multiply"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_Divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_Minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_7"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_Equality"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_8"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_Equality"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_9"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_Divide"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Divide"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_Multiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Equality"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_Equality"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/button_7"

        app:layout_constraintVertical_bias="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_0"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/_p"
        android:textSize="@dimen/TextSizeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_Divide" />

</androidx.constraintlayout.widget.ConstraintLayout>


